src/main/kotlin/com/example/demo/errors/BookNotFound.kt
package com.example.demo.errors

class BookNotFound(message: String) : RuntimeException(message) {}